yoshimi 2.0 M

2021-3-20 Will
* BugFix: GUI out of sync on MIDI-learned mod type change.

* BugFix: Right click on mixer Edit using wrong part entry.
* Added 'Scaffold Pole' to Companion bank.

2021-3-17 Will
* A few spelling checks in the Gui.

2021-3-11 Will
* BugFix: crash when locking midilearn history from GUI.
  Caused by placement of presets in the XML list.
  Now moved after midilearn.

2021-3-9 Will
* Completed GUI filter frequency correction.
* Clear changed original part name on reloads and resets.

2021-3-7 Will
* BugFix: GUI Filter frequency not showing correct value.
* Added 3 new instruments to Companion bank.

2021-3-3 Will
* Added TextLists.h to Interchange.cpp
  Fixes potential issue with GCC 10.2.0
* Reapplied filer window location independence.
  Got lost somehow :(
* Phaser feedback control deactivated when analog.
  It does nothing in that mode.
* Set correct type to Companion/Hoover.
* Reinstated Resonance to Companion/Hollow Ghost Ensemble.
  Don't know how this got lost - makes a big difference!
* Added Surf to Companion.

2021-3-1 Will
* Master window stays in view with resolution changes.
* Added extra error check in CLI BPM ratio entry.
* Added extra comments in various files.
* Final doc updates.
* Set release version 2.0

2021-2-27 Will
* Enabled LFO BPM ratios in CLI.
* Unified CLI and GUI BPM reporting.
* Allowed delay in scripts up to 30 seconds.
* Made filer window location independent of source.

2021-2-25 Will (additional)
* Fixed regression: Named instrument load shows time again.
* Swapped order of filerfave and fileradd
* Doc updates
* Set version as 2.0 rc5

2021-2-25 Will
* Now includes new filer updates and additions.
* Removed Miscellany/Images directory.
  It's redundant. All images appear in usr guide.
  Significant ones are also on the website.
* Set version as 2.0 rc4

2021-2-19 Will
* A few more instrument type changes.

2021-2-17 Will
* Had to revert some bank changes.
  This was resulting in multiple copies with