@@ -4841,10 +4841,15 @@ int CmdInterpreter::waveform(Parser& input, unsigned char controlType)
     {
         if (input.matchnMove(1, "type"))
         {
-            string name = string{input}.substr(0,3);
-            value = stringNumInList(name, filtertype, 3);
-            if (value == -1)
-                return REPLY::value_msg;
+            if (controlType != TOPLEVEL::type::Write)
+                value = 0; // dummy value
+            else
+            {
+                string name = string{input}.substr(0,3);
+                value = stringNumInList(name, filtertype, 3);
+                if (value == -1)
+                    return REPLY::value_msg;
+            }
             cmd = OSCILLATOR::control::filterType;
         }
         else if (input.matchnMove(1, "par"))
